gscrot (0.64~ppa1) intrepid; urgency=low

  * updated translations

 -- Mario Kemper <mario.kemper@googlemail.com>  Tue, 11 Nov 2008 02:50:34 +0100

gscrot (0.63~ppa9) intrepid; urgency=low

  * added new "advanced" selection-tool (see LP: #273763, depends on Gtk2::ImageView)
  * added new keybinding-mode option
  * ported to Gtk2::StatusIcon (Gtk2::TrayIcon supported for older Gtk2 Versions)
  * faster plugin checks
  * minor changes (human interface guidelines)	
  * fixed (LP: #286632, LP: #293091, LP: #291753, LP: #293616)
  * updated translations
  * code cleanup    

 -- Mario Kemper <mario.kemper@googlemail.com>  Thu, 06 Nov 2008 13:45:57 +0100

gscrot (0.62~ppa3) intrepid; urgency=low

  * display session information on startup (see LP: #277121)
  * minor changes related to upload dialog (see LP: #280154 and LP: #280165)
  * new file->save as and file->close menu entries (see LP: #280155 and LP: #280886)
  * new command line parameters (see LP: #280868 and LP: #281793)
  * deleted hard dependencies of gnome-web-photo and gtklp in source code for more flexibility (e.g. packaging)
  * updated translations    

 -- Mario Kemper <mario.kemper@googlemail.com>  Wed, 22 Oct 2008 15:10:33 +0200

gscrot (0.61~ppa3) intrepid; urgency=low

  * added new feature "include cursor" (default cursor)
  * added imageshack.us as hosting-partner
  * save and restore session automatically (restore tabs/screenshots)
  * improved plugin-dialog and upload-dialog
  * redesigned polaroid plugin
  * fixed wrong utf8-encoding in profile names
  * fixed wrong utf8-encoding in about dialog
  * improved auto incrementing of filenames (see LP: #275352)
  * improved thumbs (session tab) 
  * updated translations    

 -- Mario Kemper <mario.kemper@googlemail.com>  Mon, 06 Oct 2008 22:47:58 +0200
 
gscrot (0.60~ppa4) intrepid; urgency=low

  * added new feature "grab window-section"
  * added settings-profiles 
  * added new plugin interface
  * added new plugins
    -- pdf-export