@@ -1,8 +1,12 @@
 gscrot (0.64~ppa1) intrepid; urgency=low
 
+  * added ftp-upload
+  * improved start time
+  * improved plugin interface and error handling
   * updated translations
+  * massive code cleanup
 
- -- Mario Kemper <mario.kemper@googlemail.com>  Tue, 11 Nov 2008 02:50:34 +0100
+ -- Mario Kemper <mario.kemper@googlemail.com>  Sat, 15 Nov 2008 02:35:35 +0100
 
 gscrot (0.63~ppa9) intrepid; urgency=low
 
